# FPGA-exp

./: .gitignore  README.md  action-examples.yml
.github/workflows/: project03.yml  project04.yml  project05.yml  project06.yml  project07.yml  project08.yml  project8.yml
all_projects/project02/: Fedora_WSL  Fedora_WSL.md  README.md
all_projects/project03/: dune-project  tangnano20k.cst
all_projects/project03/leds_hardcaml/: Makefile
all_projects/project03/leds_hardcaml/lib/: config_intf.ml  dune  leds.ml  top.ml
all_projects/project03/lib/: counter.ml  dune  leds.ml  top.ml
all_projects/project04/: Makefile  ai_generated.ml  dune-project  tangnano20k.cst
all_projects/project05/: README.md  dune-project  tangnano20k.cst  uart_rx.v
all_projects/project06/: README.md  dune-project  fpga4fun_dvi.v  tangnano20k.cst
all_projects/project07/: README.md  dune-project  tangnano20k.cst
all_projects/project07/bmp280_hardcaml/test/: bmp280_model.ml  dune  testbench.ml  testbench_lib.ml  testbench_me.ml
all_projects/project08/: Makefile  README.md  dune-project  spi_1_ai.ml  spi_2_ai.ml
all_projects/project09/: README.md  sdcmd_ctrl.v  tangnano20k.cst
all_projects/project10/: README.md
all_projects/project12/: README.md  Readme.md  main.ml  spw_char_rx.ml  spw_codec_test.v  spw_ds_decoder.ml  spw_ds_encoder.ml  (+3 more)
project1/: README.md
project2/: README.md  tangnano20k.cst
project3/: README.md  dune-project  tangnano20k.cst
project5/: README.md  uart_top.v
project6/: README.md  TMDS_rPLL.v  hdmi.cst  testpattern.v  video_top.ml
project8/: README.md
(+165 files in other folders)
